# ASWF

./: .gitignore  README.md  pyproject.toml  requirements.txt
ASWF/: __init__.py
ASWF/datasets/: __init__.py  paired_spectra_dataset.py  transforms.py
ASWF/losses/: __init__.py  classification_losses.py  decomposition_losses.py
ASWF/models/: __init__.py  aswf.py  asymmetric_fusion.py  classifier.py  decomposition.py  subband_encoder.py  wavelet.py
ASWF/trainers/: __init__.py  evaluator.py  stage1_trainer.py  stage2_trainer.py  utils.py
ASWF/utils/: __init__.py  checkpoint.py  config.py  io.py  logger.py  metrics.py  seed.py  wavelet_features.py
ASWF/visualization/: __init__.py  confusion_matrix.py  curves.py  embedding_vis.py  roc.py  scale_analysis.py  shared_private_analysis.py  wavenumber_backmap.py
configs/: aswf_base.yaml  aswf_smoke.yaml
data/: README.md
docs/: DATA_FORMAT.md  METHOD_OVERVIEW.md
scripts/: common.py  evaluate.py  export_features.py  train_full_pipeline.py  train_stage1.py  train_stage2.py
