[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aswf-spectra"
version = "0.1.0"
description = "Asymmetric shared-private wavelet fusion for paired one-dimensional spectra."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "ASWF contributors" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "PyWavelets>=1.5",
  "openpyxl>=3.1",
  "PyYAML>=6.0",
  "torch>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4"
]

[tool.setuptools]
packages = { find = { include = ["ASWF*"] } }
